<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_bg"
    tools:context=".WelcomeActivity">
    <EditText
        android:id="@+id/et_username"
        android:layout_width="@dimen/welcome_input_width"
        android:layout_height="@dimen/welcome_input_height"
        android:background="@drawable/input_name_bg"
        android:layout_centerHorizontal="true"
		android:layout_marginTop="@dimen/welcome_top_margin"
        android:ems="10"
        android:hint="@string/welcome_et_username"
        android:textColor="@color/main_text">
    </EditText>
    <EditText
        android:id="@+id/et_password"
        android:layout_width="@dimen/welcome_input_width"
        android:layout_height="@dimen/welcome_input_height"
        android:background="@drawable/input_pwd_bg"
		android:layout_below="@id/et_username"
		android:layout_marginTop="@dimen/welcome_spacing"
		android:layout_alignLeft="@id/et_username"
        android:ems="10"
        android:hint="@string/welcome_et_pwd"
        android:inputType="textPassword"
        android:textColor="@color/main_text">
    </EditText>
	<Button
	    android:id="@+id/bt_login"
        android:layout_width="@dimen/welcome_btn_width"
        android:layout_height="@dimen/welcome_btn_height"
        android:layout_below="@id/et_password"
		android:layout_marginTop="@dimen/welcome_spacing"
        android:layout_alignRight="@id/et_password"
        android:text="@string/welcome_bt_login"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/welcome_btn_textsize"
        android:background="#87bbd9"
        android:onClick="onClickLogin"/>
</RelativeLayout>