<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    tools:context=".MainActivity" >
    
    <ImageButton
        android:id="@+id/icon_main_info"
	    android:layout_width="@dimen/main_icon_width"
	    android:layout_height="@dimen/main_icon_height"
	    android:layout_alignParentRight="true"
	    android:layout_marginTop="@dimen/main_topicon_marginTop"
	    android:layout_marginRight="@dimen/main_topicon_marginRight"
	    android:src="@drawable/icon_main_info"
	    android:contentDescription="@string/imgdes_dumb"
	    android:background="#00ffffff"
	    android:scaleType="fitCenter"/>
    
    <ImageButton
	    android:layout_width="@dimen/main_icon_width"
	    android:layout_height="@dimen/main_icon_height"
	    android:layout_toLeftOf="@id/icon_main_info"
	    android:layout_alignTop="@id/icon_main_info"
	    android:layout_marginRight="@dimen/main_topicon_marginRight2"
	    android:src="@drawable/icon_main_gallery"
	    android:contentDescription="@string/imgdes_dumb"
	    android:background="#00ffffff"
	    android:scaleType="fitCenter"
	    android:onClick="onClickGallery"/>

    <RelativeLayout
        android:id="@+id/main_photos"
	    android:layout_width="@dimen/main_photos_width"
        android:layout_height="@dimen/main_photos_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/main_photos_marginTop"
        android:paddingLeft="@dimen/main_photos_padding"
        android:paddingRight="@dimen/main_photos_padding"
        android:paddingTop="2dp"
        android:paddingBottom="5dp"
		android:background="@drawable/photos_frame">
        
        <android.support.v4.view.ViewPager
	        android:id="@+android:id/viewpager"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent">
	    </android.support.v4.view.ViewPager>
	    
	    <RelativeLayout
			android:id="@+id/photo_titlebar"
	        android:layout_width="@dimen/photo_bar_width"
	        android:layout_height="@dimen/photo_bar_height"
	        android:layout_marginBottom="@dimen/photo_bar_marginBottom"
	        android:layout_alignParentBottom="true"
	        android:layout_centerHorizontal="true"
	        android:background="#88000000">
	        <TextView
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_centerVertical="true"
			    android:layout_marginLeft="@dimen/photo_titlebar_marginLeft"
			    android:text="@string/photo_frag_title_sample"
			    android:textSize="@dimen/photo_titlebar_textsize"
			    android:textColor="@android:color/white"/>
	    </RelativeLayout>
	    <ImageView
	        android:id="@+id/photo_playbar"
	        android:layout_width="@dimen/photo_bar_width"
	        android:layout_height="@dimen/photo_bar_height"
	        android:layout_marginBottom="@dimen/photo_bar_marginBottom"
	        android:layout_centerHorizontal="true"
	        android:background="@drawable/playbar"
	        android:contentDescription="@string/imgdes_dumb"
	        android:layout_alignParentBottom="true"
	        android:visibility="invisible"/>
	    <!-- 
	    <ImageView
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:src="@drawable/highlight_bg"
	        android:contentDescription="@string/imgdes_dumb"
	        android:scaleType="fitXY"/>  -->
    </RelativeLayout>
    
    <GridView
        android:id="@+id/main_tags_gridview"
        android:layout_width="@dimen/tags_section_width"
        android:layout_height="@dimen/tags_section_height"
        android:layout_below="@id/main_photos"
        android:layout_marginTop="@dimen/tags_section_marginTop"
        android:layout_marginLeft="@dimen/tags_section_marginLeft"
        android:paddingTop="10dp"
        android:numColumns="3"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:verticalSpacing="10dp"
        android:background="#22000000"></GridView>
    
    <LinearLayout
        android:id="@+id/main_left_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/main_tags_gridview"
        android:layout_alignTop="@id/main_tags_gridview"
        android:layout_marginLeft="@dimen/button_section_marginLeft"
        android:orientation="vertical">
        <ImageButton
            android:id="@+id/btn_main_talk"
            android:layout_width="@dimen/main_button_width"
            android:layout_height="@dimen/main_button_height"
            android:scaleType="fitXY"
            android:src="@drawable/btn_main_talk"
            android:contentDescription="@string/imgdes_record_story"
            android:background="#00ffffff"/>
        <ImageButton
            android:id="@+id/btn_main_listen"
            android:layout_width="@dimen/main_button_width"
            android:layout_height="@dimen/main_button_height"
            android:scaleType="fitXY"
            android:src="@drawable/btn_main_listen"
            android:contentDescription="@string/imgdes_listen"
            android:background="#00ffffff"
            android:layout_marginTop="@dimen/button_section_spacing"
            android:onClick="onClickListen"/>
        <ImageButton
            android:id="@+id/btn_main_share"
			android:layout_width="@dimen/main_button_width"
            android:layout_height="@dimen/main_button_height"
            android:scaleType="fitXY"
            android:src="@drawable/btn_main_share"
            android:contentDescription="@string/imgdes_share"
            android:background="#00ffffff"
            android:layout_marginTop="@dimen/button_section_spacing"/>
    </LinearLayout>
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_tags_gridview"
        android:layout_alignLeft="@id/main_tags_gridview"
        android:layout_alignRight="@id/main_tags_gridview"
        android:layout_marginTop="10dp">
        <ImageButton
        	android:id="@+id/btn_main_scan"
            android:layout_width="@dimen/main_bar_width"
	        android:layout_height="@dimen/main_bar_height"
	        android:scaleType="fitXY"
	        android:layout_marginLeft="@dimen/main_bar_marginLeft"
	        android:src="@drawable/btn_main_scan"
	        android:contentDescription="@string/imgdes_dumb"
	    	android:background="#00ffffff"
			android:onClick="onClickScan"/>
        <EditText
            android:layout_width="@dimen/main_search_width"
            android:layout_height="@dimen/main_search_height"
            android:layout_alignParentRight="true"
            android:paddingLeft="@dimen/main_search_paddingLeft"
            android:textColor="#bdbab4"
            android:textSize="@dimen/main_search_textsize"
            android:background="@drawable/bg_search_input"
            android:hint="@string/hint_main_search"/>
    </RelativeLayout>
    
</RelativeLayout>